--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/multipart": "^9.0.3",
     "@types/node": "^22.13.17",
+    "fastify": "^5.3.3",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
